formation/web/kuard-pod-health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
   app: demo
  namespace: forma-madiba
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 2
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
