formation/web/weblo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "upd 1.10 vers 1.19"
  labels:
    app: web
  name: nginx-deploy
spec:
  replicas: 10
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 5
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: weblo:1.34
        name: weblo
