formation/web/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  # namespace: ludo
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
