formation/web/ingresss-apache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-url
   # namespace: formation
  annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
        #ingressClassName: nginx
  rules:
    - host: app-docker.ludovic.tech
      http:
        paths:
          - backend:
              service:
                name: web-service
                port:
                  number: 80
            path: /
            pathType: Prefix
